k8s/services/atuin/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 1903
        runAsGroup: 1903
        fsGroup: 1903
      containers:
        - name: atuin
          image: ghcr.io/atuinsh/atuin
          args:
            - server
            - start
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          emptyDir: {}
