k8s/services/atuin/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
