k8s/services/atuin/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - atuin.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: atuin
          port: 80
